Performance tweaks